# cookiecutter-data-science-templates

./: README.md  ccds-help.json  ccds.json
ccds/hook_utils/: dependencies.py
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .coveragerc  Makefile  README.md  main.py  pyproject.toml  pytest.ini  test.env
{{ cookiecutter.repo_name }}/docs/sphinx/: conf.py  index.rst
